# paper-reader

./: .env.example  .gitignore  AGENTS.md  LICENSE  PLAN.md  README.md  main.py  pyproject.toml
docs/: README_zh-cn.md
src/: main.py
src/agents/: paper_agents.py
src/tasks/: paper_tasks.py
src/tools/: markitdown_tool.py  mineru_tool.py  vector_db_tool.py
tests/: test_integration.py  test_markitdown_tool.py  test_mineru_tool.py  test_vector_db_tool.py
